# yubitui

./: .continue-here.md  .env  .gitignore  CHANGELOG.md  CLAUDE.md  COMPLETE.md  CONTRIBUTING.md  Cargo.toml  FINAL_STATUS.md  HONEST_STATUS.md  LICENSE-MIT  PROJECT_STATUS.md  QUICKSTART.md  README.md  SUMMARY.md  audit.sh  package.json  pnpm-lock.yaml  tmp
.github/: FUNDING.yml
.github/workflows/: cargo-audit  codeql.yml  release.yml  rust.yml
.planning/: HANDOFF.json  MILESTONES.md  NOTES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/debug/: gpg-edit-key-hang-respawn.md  import-key-enc-card-removed-REVIEWS.md  import-key-enc-card-removed.md  knowledge-base.md  mouse-events-crossterm-iterm2.md  multi-broken-features.md  subsequent-screens-no-card-data.md
.planning/milestones/: v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: app.rs  app_css.css  main.rs
src/diagnostics/: gpg_agent.rs  mod.rs  pcscd.rs  scdaemon.rs  ssh_agent.rs
src/model/: app_state.rs  card.rs  click_region.rs  detection.rs  fido2.rs  key_operations.rs  mock.rs  mod.rs  oath.rs  onboarding.rs  openpgp.rs  openpgp_delete.rs  otp.rs  pin.rs  pin_operations.rs  piv.rs  piv_delete.rs  ssh.rs  ssh_operations.rs  touch_policy.rs
src/tui/: config.rs  dashboard.rs  mod.rs  (+13 more)
stl_exports/: Security_Key_C_NFC.stl  Security_Key_NFC.stl  YubiKey_5C.stl  YubiKey_5C_NFC.stl  YubiKey_5C_Nano.stl  YubiKey_5Ci.stl  YubiKey_5_NFC.stl  YubiKey_5_Nano.stl  YubiKey_Bio_USB_A.stl  YubiKey_C_Bio_USB_C.stl
(+291 files in other folders)
