[package]
name = "yubitui"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["Your Name <you@example.com>"]
description = "A blazingly fast, intelligent TUI for YubiKey management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/yubitui"
readme = "README.md"
keywords = ["yubikey", "tui", "gpg", "ssh", "security"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "yubitui"
path = "src/main.rs"

[dependencies]
# TUI Framework
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
textual-rs = "0.3.9"

# YubiKey Communication
pcsc = "2.8"
ctap-hid-fido2 = "3.5.9"
hidapi = "2"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
dirs = "5.0"
chrono = "0.4"
regex = "1.11"
once_cell = "1.20"
base64 = "0.22.1"
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.1"
insta = "1.47"

[features]
default = []
# Enable tests that require a physical YubiKey
device-tests = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
